--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10",
     "webpack": "^5.75.0"
